--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <li>
                 <a href="./1er-desafio-comp/index.html">1er Desafio Complementario</a>
             </li>
+            <li>
+                <a href="./2do-desafio/index.html">2do Desafio</a>
+            </li>
         </ul>
     </main>
 </body>
