Nombre de desafio agregado

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="./1er-desafio-comp/index.html">1er Desafio Complementario</a>
             </li>
             <li>
-                <a href="./2do-desafio/index.html">2do Desafio</a>
+                <a href="./2do-desafio/index.html">2do Desafio - "Simulador Interactivo"</a>
             </li>
         </ul>
     </main>
