3er desafio complementario

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <li>
                 <a href="./2do-desafio/index.html">2do Desafio - "Simulador Interactivo"</a>
             </li>
+            <li>
+                <a href="./3er-desafio/index.html">3er Desafio - "Integrando Arrays"</a>
+            </li>
         </ul>
     </main>
 </body>
