--- a/2do-desafio/index.html
+++ b/2do-desafio/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Consola en pantalla</title>
+    <title>2do Desafio - Simulador Interactivo</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
