--- a/3er-desafio/index.html
+++ b/3er-desafio/index.html
@@ -62,8 +62,8 @@
         </div>
     </div>
 
-    <div class="row">
-        <button type="button" class="btn btn-primary mb-5" onclick="runCalculo()">Calcular</button>
+    <div class="row justify-content-center">
+        <button type="button" class="btn btn-primary mb-5 col-4" onclick="runCalculo()">Calcular</button>
     </div>
 
     <div class="row justify-content-center text-align-center" id="pTableContainer">
