--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <li>
                 <a href="./4-1er-proyecto-final/index.html">1er pre entrega del proyecto final</a>
             </li>
+            <li>
+                <a href="./6-5to-desafio/index.html">5to Desafio - "Integrando Eventos"</a>
+            </li>
         </ul>
     </main>
 </body>
