--- a/Proyecto FINAL/index.html
+++ b/Proyecto FINAL/index.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/91e0861dab.js" crossorigin="anonymous"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link rel="stylesheet" href="./css/index.css">
 </head>
 
@@ -18,9 +19,17 @@
     <nav class="navbar">
       <div class="container">
         <a class="navbar-brand" href="#"><img src="./img/logo/logo.jpg" alt="" width="40" height="24" class="me-4 text-dark">Zapas</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+        
+        <div>
+
+            <a href="./perfil.html"><i class="fa fas fa-solid fa-user fs-3"></i></a>
+
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
           aria-controls="offcanvasNavbar" onclick="crearCarrito()">
           <i class="fas fa-shopping-cart fs-3"></i>
+
+        </div>
+
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
@@ -66,8 +75,8 @@
             <h5 class="card-title mb-3">Nike Air Force One R/W</h5>
             <p class="text-precio fw-bold" id="getPrice0">$15000</p>
             <div class="select is-small">
-              <select class="selectList" id="selectTalles">
-                <option>Talle</option>
+              <select class="form-select form-select-sm selectList mb-3">
+                <option selected disabled>Talles Masculinos</option>
               </select>
             </div>
             <button class="cart-boton" onclick="anadircarro(0)">
@@ -85,8 +94,8 @@
             <h5 class="card-title mb-3">Nike Air Jordan Low 3</h5>
             <p class="text-precio fw-bold" id="getPrice1">$12000</p>
             <div class="select is-small">
-              <select id="selectTalles">
-                <option>Talle</option>
+              <select class="form-select form-select-sm selectList mb-3">
+                <option selected disabled>Talles Femeninos</option>
               </select>
             </div>
             <button class="cart-boton" onclick="anadircarro(1)">
@@ -104,8 +113,8 @@
             <h5 class="card-title mb-3">Nike Air Max 90 Denim</h5>
             <p class="text-precio fw-bold" id="getPrice2">$19000</p>
             <div class="select is-small">
-              <select id="selectTalles">
-                <option>Talle</option>
+              <select class="form-select form-select-sm selectList mb-3">
+                <option selected disabled>Talles Masculinos</option>
               </select>
             </div>
             <button class="cart-boton" onclick="anadircarro(2)">
@@ -126,8 +135,8 @@
             <h5 class="card-title mb-3">Nike Air Jordan 1 B/W</h5>
             <p class="text-precio fw-bold" id="getPrice3">$15000</p>
             <div class="select is-small">
-              <select id="selectTalles">
-                <option>Talle</option>
+              <select class="form-select form-select-sm selectList mb-3">
+                <option selected disabled>Talles Masculinos</option>
               </select>
             </div>
             <button class="cart-boton" onclick="anadircarro(3)">
@@ -145,8 +154,8 @@
             <h5 class="card-title mb-3">Puma RS-X</h5>
             <p class="text-precio fw-bold" id="getPrice4">$18000</p>
             <div class="select is-small">
-              <select id="selectTalles">
-                <option>Talle</option>
+              <select class="form-select form-select-sm selectList mb-3">
+                <option selected disabled>Talles Masculinos</option>
               </select>
             </div>
             <button class="cart-boton" onclick="anadircarro(4)">
@@ -164,8 +173,8 @@
             <h5 class="card-title mb-3">Nike Air Force Mid Cam</h5>
             <p class="text-precio fw-bold" id="getPrice5">$14000</p>
             <div class="select is-small">
-              <select id="selectTalles">
-                <option>Talle</option>
+              <select class="form-select form-select-sm selectList mb-3">
+                <option selected disabled>Talles Masculinos</option>
               </select>
             </div>
             <button class="cart-boton" onclick="anadircarro(5)">
@@ -195,7 +204,7 @@
             <ul class="list-unstyled text-muted">
               <li><a href="#">Top</a></li>
               <li><a href="#">Productos</a></li>
-              <li><a href="#">Contacto</a></li>
+              <li><a href="./perfil.html">Perfil</a></li>
               <li><a href="#">FAQ</a></li>
             </ul>
           </div>
