se agrega fetch de cotizacion dolar

--- a/Proyecto FINAL/perfil.html
+++ b/Proyecto FINAL/perfil.html
@@ -82,10 +82,10 @@
           <div class="col-lg-2 col-md-6">
             <h5 class="text-white mb-3">Nuestros proveedores</h5>
             <ul class="list-unstyled text-muted">
-              <li><a href="https://www.nike.com" target="_blank">Nike</a></li>
-              <li><a href="https://www.adidas.com" target="_blank">Adidas</a></li>
-              <li><a href="https://www.puma.com" target="_blank">Puma</a></li>
-              <li><a href="https://www.balenciaga.com" target="_blank">Balenciaga</a></li>
+              <li>lo tomamos a:<p class="text-success" id="dolarCompra"></p>
+              </li>
+              <li>lo vendemos a:<p class="text-danger" id="dolarVenta"></p>
+              </li>
             </ul>
           </div>
           <div class="col-lg-4 col-md-6">
