nuevo contador de unidades en carrito

--- a/Proyecto FINAL/index.html
+++ b/Proyecto FINAL/index.html
@@ -71,19 +71,19 @@
 
       <p class="prod-recomendado text-center m-5">Productos Recomendados</p>
 
-      <div class="row justify-content-evenly mb-5">
+      <div class="row justify-content-evenly mb-5" id="prodRecom">
 
         <div class="card col-3" id="primerProd">
           <img src="./img/productos/1.JPG" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column align-items-center">
             <h5 class="card-title mb-3">Nike Air Force One R/W</h5>
-            <p class="text-precio fw-bold" id="getPrice0">$15000</p>
+            <p class="text-precio fw-bold">$15000</p>
             <div class="select is-small">
               <select class="form-select form-select-sm selectList mb-3">
                 <option selected disabled>Talles Masculinos</option>
               </select>
             </div>
-            <button class="cart-boton" onclick="anadircarro(0)">
+            <button class="cart-boton" onclick="anadircarro(this)">
               <span class="anadir">Comprar</span>
               <span class="anadido">Añadido</span>
               <i class="fas fa-shopping-cart"></i>
@@ -96,13 +96,13 @@
           <img src="./img/productos/2.JPG" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column align-items-center">
             <h5 class="card-title mb-3">Nike Air Jordan Low 3</h5>
-            <p class="text-precio fw-bold" id="getPrice1">$12000</p>
+            <p class="text-precio fw-bold">$12000</p>
             <div class="select is-small">
               <select class="form-select form-select-sm selectList mb-3">
                 <option selected disabled>Talles Femeninos</option>
               </select>
             </div>
-            <button class="cart-boton" onclick="anadircarro(1)">
+            <button class="cart-boton" onclick="anadircarro(this)">
               <span class="anadir">Comprar</span>
               <span class="anadido">Añadido</span>
               <i class="fas fa-shopping-cart"></i>
@@ -115,13 +115,13 @@
           <img src="./img/productos/3.JPG" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column align-items-center">
             <h5 class="card-title mb-3">Nike Air Max 90 Denim</h5>
-            <p class="text-precio fw-bold" id="getPrice2">$19000</p>
+            <p class="text-precio fw-bold">$19000</p>
             <div class="select is-small">
               <select class="form-select form-select-sm selectList mb-3">
                 <option selected disabled>Talles Masculinos</option>
               </select>
             </div>
-            <button class="cart-boton" onclick="anadircarro(2)">
+            <button class="cart-boton" onclick="anadircarro(this)">
               <span class="anadir">Comprar</span>
               <span class="anadido">Añadido</span>
               <i class="fas fa-shopping-cart"></i>
@@ -133,17 +133,18 @@
       </div>
 
       <div class="row mb-5 justify-content-evenly">
+
         <div class="card col-3" id="cuartoProd">
           <img src="./img/productos/4.JPG" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column align-items-center">
             <h5 class="card-title mb-3">Nike Air Jordan 1 B/W</h5>
-            <p class="text-precio fw-bold" id="getPrice3">$15000</p>
+            <p class="text-precio fw-bold">$15000</p>
             <div class="select is-small">
               <select class="form-select form-select-sm selectList mb-3">
                 <option selected disabled>Talles Masculinos</option>
               </select>
             </div>
-            <button class="cart-boton" onclick="anadircarro(3)">
+            <button class="cart-boton" onclick="anadircarro(this)">
               <span class="anadir">Comprar</span>
               <span class="anadido">Añadido</span>
               <i class="fas fa-shopping-cart"></i>
@@ -156,13 +157,13 @@
           <img src="./img/productos/5.JPG" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column align-items-center">
             <h5 class="card-title mb-3">Puma RS-X</h5>
-            <p class="text-precio fw-bold" id="getPrice4">$18000</p>
+            <p class="text-precio fw-bold">$18000</p>
             <div class="select is-small">
               <select class="form-select form-select-sm selectList mb-3">
                 <option selected disabled>Talles Masculinos</option>
               </select>
             </div>
-            <button class="cart-boton" onclick="anadircarro(4)">
+            <button class="cart-boton" onclick="anadircarro(this)">
               <span class="anadir">Comprar</span>
               <span class="anadido">Añadido</span>
               <i class="fas fa-shopping-cart"></i>
@@ -175,13 +176,13 @@
           <img src="./img/productos/6.JPG" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column align-items-center">
             <h5 class="card-title mb-3">Nike Air Force Mid Cam</h5>
-            <p class="text-precio fw-bold" id="getPrice5">$14000</p>
+            <p class="text-precio fw-bold">$14000</p>
             <div class="select is-small">
               <select class="form-select form-select-sm selectList mb-3">
                 <option selected disabled>Talles Masculinos</option>
               </select>
             </div>
-            <button class="cart-boton" onclick="anadircarro(5)">
+            <button class="cart-boton" onclick="anadircarro(this)">
               <span class="anadir">Comprar</span>
               <span class="anadido">Añadido</span>
               <i class="fas fa-shopping-cart"></i>
